Updates to styling and js

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <div id="heading">
-        <h1><i class="fa fa-newspaper-o"></i>New York Times Search</h1>
+        <h1><i class="fa fa-newspaper-o"></i> New York Times Search</h1>
     </div>
     <div id="searchParametersPane">
-
 
         <div id="searchTermBox">
                 <label for="searchTerm"><b>Search for a Topic:</b><br></label>
@@ -43,13 +42,15 @@
             <button type="button" id="clearButton"><i class='fa fa-trash'></i> Clear Results</button>
         </div>
     </div>
+
     <div id="topArticlesPane">
-        <b>Top Articles: </b><br>
+            <i class="fa fa-table"></i> <b>Top Articles</b><br>
         <div id="listOfArticles"></div>
     </div>
+
     <footer class="page-footer text-center font-small special-color-dark pt-4">
         <div class="col col-12" id="footing">
-        <b>Made with lots and lots of ❤︎</b>
+        <b>Made with lots and lots of <i class="fa fa-heart"></i></b>
         </div>
     </footer>
   
